-- SQL dump generated using DBML (dbml-lang.org)
-- Database: PostgreSQL
-- Generated at: 2023-08-04T08:35:37.746Z

DO $$ BEGIN
    CREATE TYPE "media_type" AS ENUM (
      'audio',
      'video',
      'document',
      'image'
    );
EXCEPTION
    WHEN duplicate_object THEN null;
END $$;


CREATE TABLE IF NOT EXISTS "profile" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "login" varchar UNIQUE NOT NULL,
  "about" varchar,
  "photo" varchar,
  "city" varchar NOT NULL
);

CREATE TABLE IF NOT EXISTS "interest" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar UNIQUE NOT NULL
);

CREATE TABLE IF NOT EXISTS "profile_interest" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "profile_id" bigint NOT NULL,
  "interest_id" bigint NOT NULL
);

CREATE TABLE IF NOT EXISTS "post" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "body" text NOT NULL,
  "profile_id" integer NOT NULL,
  "like_counter" integer NOT NULL DEFAULT 0,
  "view_counter" integer NOT NULL DEFAULT 0,
  "created_at" timestamp NOT NULL
);

CREATE TABLE IF NOT EXISTS "media" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "post_id" integer NOT NULL,
  "type" media_type NOT NULL,
  "url" varchar NOT NULL
);

CREATE TABLE IF NOT EXISTS "hashtag" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar UNIQUE NOT NULL
);

CREATE TABLE IF NOT EXISTS "post_hashtag" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "hashtag_id" bigint NOT NULL,
  "post_id" bigint NOT NULL
);

CREATE TABLE IF NOT EXISTS "chat" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL
);

CREATE TABLE IF NOT EXISTS "chat_profile" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "profile_id" integer NOT NULL,
  "chat_id" integer NOT NULL
);

CREATE UNIQUE INDEX  IF NOT EXISTS "profile_interest_interest_id_profile_id_ux" ON "profile_interest" ("interest_id", "profile_id");

CREATE INDEX  IF NOT EXISTS "post_profile_id_ix" ON "post" ("profile_id");

CREATE INDEX  IF NOT EXISTS "post_created_at_ix" ON "post" ("created_at");

CREATE INDEX  IF NOT EXISTS "media_post_id_ix" ON "media" ("post_id");

CREATE UNIQUE INDEX  IF NOT EXISTS "post_hashtag_post_id_hashtag_id_ux" ON "post_hashtag" ("post_id", "hashtag_id");

CREATE UNIQUE INDEX  IF NOT EXISTS "chat_profile_profile_id_chat_id_ux" ON "chat_profile" ("profile_id", "chat_id");

COMMENT ON COLUMN "post"."body" IS 'Content of the post';

ALTER TABLE IF EXISTS "profile_interest" ADD FOREIGN KEY ("profile_id") REFERENCES "profile" ("id");

ALTER TABLE IF EXISTS "profile_interest" ADD FOREIGN KEY ("interest_id") REFERENCES "interest" ("id");

ALTER TABLE IF EXISTS "post" ADD FOREIGN KEY ("profile_id") REFERENCES "profile" ("id");

ALTER TABLE IF EXISTS "media" ADD FOREIGN KEY ("post_id") REFERENCES "post" ("id");

ALTER TABLE IF EXISTS "post_hashtag" ADD FOREIGN KEY ("hashtag_id") REFERENCES "hashtag" ("id");

ALTER TABLE IF EXISTS "post_hashtag" ADD FOREIGN KEY ("post_id") REFERENCES "post" ("id");

ALTER TABLE "chat_profile" ADD FOREIGN KEY ("profile_id") REFERENCES "profile" ("id");

ALTER TABLE "chat_profile" ADD FOREIGN KEY ("chat_id") REFERENCES "chat" ("id");